# miniai

./: README.md
minicodex/: README.md  pyproject.toml
minicodex/src/minicodex/: cli.py
